--- a/css/donors.css
+++ b/css/donors.css
@@ -1,12 +1,15 @@
+.donorsSection {
+  background-color: #F7F8FA;
+}
 .donorsBgWrapper {
   position: relative;
   top: 60px;
-  /* margin-top: 6px; */
 }
 
 .donors {
   box-shadow: 0 1px 16px 0 rgba(30, 89, 92, 0.2);
-  background: linear-gradient(to top, #045257, #4e908d), linear-gradient(to bottom, #045257, #045257);
+  background: url("/images/Bgd-Donors-Mobile.svg") no-repeat;
+  background-size: cover;
   padding-top: 90px;
   padding-bottom: 40px;
 }
@@ -19,11 +22,12 @@
   align-items: center;
 }
 
-.donorsTextWrapper {
+.donorsTitleWrapper,
+.donorsDescriptionWrapper {
   width: 288px;
 }
 
-.donorsTextWrapper > h2 {
+.donorsTitleWrapper > h2 {
   font-size: 32px;
   font-weight: bold;
   line-height: 1.25;
@@ -32,7 +36,7 @@
   margin-bottom: 16px;
 }
 
-.donorsTextWrapper > p {
+.donorsDescriptionWrapper > p {
   font-size: 16px;
   font-weight: 500;
   line-height: 1.5;
@@ -51,3 +55,61 @@
   white-space: nowrap;
   background-color: rgba(255, 255, 255, 0.2);
 }
+
+.donorsLogos {
+  height: 320px;
+  width: 298px;
+  margin-top: 24px;
+  margin-bottom: 32px;
+  background: url("/images/donors-logo-mobile.png") no-repeat;
+  background-size: contain;
+}
+
+@media screen and (min-width: 640px) {
+  .donors {
+    background: url("/images/Bgd-Donors-Tablet.png") no-repeat;
+    background-size: cover;
+    box-shadow: none;
+  }
+  .donorsBgWrapper {
+    display: flex;
+    justify-content: center;
+  }
+  .donorsTitleWrapper {
+    width: 100%;
+  }
+  .donorsDescriptionWrapper {
+    width: 600px;
+  }
+  .donorsLogos {
+    width: 90%;
+    height: 118px;
+    background: url("/images/donors-logo-desktop.png") no-repeat;
+    background-size: contain;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .donorsDescriptionWrapper {
+    width: 688px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .donorsSection {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background: linear-gradient(180deg, #F7F8FA 60%, #f0f1f2 40%);
+  }
+  .donors {
+    background: url("/images/Bgd-Donors-Desktop.png") no-repeat;
+    background-size: cover;
+    width: 992px;
+  }
+  .donorsLogos {
+    width: 60%;
+  }
+}
+
+
