--- a/css/fiscalSponsorship.css
+++ b/css/fiscalSponsorship.css
@@ -11,6 +11,14 @@
   box-sizing: border-box;
 }
 
+.fiscalSponsorshipTitleAndActionWrapper {
+  margin-bottom: 32px;
+}
+
+.fiscalSponsorshipTitlesContainer {
+  width: 304px;
+}
+
 .fiscalSponsorshipSectionContent h3 {
   font-size: 14px;
   font-weight: bold;
@@ -40,7 +48,7 @@
   margin-bottom: 32px;
 }
 
-.actionWrapper button {
+.actionWrapper a {
   font-size: 14px;
   font-weight: 500;
   line-height: 1.14;
@@ -67,8 +75,117 @@
   display: flex;
   box-sizing: border-box;
   justify-content: flex-end;
+  width: 95%;
+  align-self: flex-end;
 }
 
 .sponsorShipIllustrationWrapper img {
-  /* width: ; */
+  width: 100%;
+  height: 100%;
 }
+
+.sponsorShipIllustrationWrapper > .bigger {
+  display: none;
+}
+
+.sponsorShipIllustrationWrapper > .biggest {
+  display: none;
+}
+
+@media screen and (min-width: 640px) {
+	.fiscalSponsorshipSectionContent {
+    flex-direction: row;
+    align-items: flex-start;
+    justify-content: flex-end;
+  }
+
+  .sponsorShipIllustrationWrapper {
+    width: 440px;
+    height: 479px;
+  }
+  .fiscalSponsorshipTitleAndActionWrapper{
+    position: relative;
+    top: 40px;
+    width: 294px;
+  }
+  .sponsorShipIllustrationWrapper > .bigger {
+    display: block;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .fiscalSponsorshipSection {
+    margin-left: 42px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .fiscalSponsorshipSection {
+    margin-left: 0;
+  }
+  .fiscalSponsorshipSectionContent {
+    justify-content: flex-end;
+    align-items: baseline;
+  }
+  .fiscalSponsorshipTitleAndActionWrapper{
+    top: 0;
+    margin-right: auto;
+    margin-left: auto;
+  }
+  .sponsorShipIllustrationWrapper {
+    position: relative;
+    top: -140px;
+    z-index: 1;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .fiscalSponsorshipTitleAndActionWrapper {
+    margin-left: 22%;
+  }
+  .sponsorShipIllustrationWrapper {
+    width: 640px;
+    height: 679px;
+  }
+  .fiscalSponsorshipTitlesContainer {
+    width: 540px;
+  }
+  .fiscalSponsorshipSectionContent h3 {
+    font-size: 24px;
+    font-weight: bold;
+    line-height: 1.33;
+    color: #cddadb;
+    margin-bottom: 0;
+  }
+  .fiscalSponsorshipSectionContent .title h1 {
+    font-size: 48px;
+    font-weight: bold;
+    line-height: 1.67;
+    color: #e6eded;
+  }
+
+  .madeEasy {
+    font-size: 64px;
+    font-weight: bold;
+    line-height: 1.25;
+    color: #88c6c1;
+  }  
+}
+
+@media screen and (min-width: 2560px) { 
+	.sponsorShipIllustrationWrapper > .bigger {
+    display: none;
+  }
+  .sponsorShipIllustrationWrapper {
+    width: 1319px;
+    height: 735px;
+  }
+  .sponsorShipIllustrationWrapper > .biggest {
+    display: block;
+  }
+
+  .fiscalSponsorshipTitleAndActionWrapper {
+    margin-left: 29.5%;
+  }
+}
+
