--- a/css/generalInformation.css
+++ b/css/generalInformation.css
@@ -7,6 +7,9 @@
 .generalInformationContent {
   margin-right: 16px;
   margin-left: 16px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .generalInformationTitleWrapper {
@@ -60,8 +63,19 @@
 }
 
 .doYouStillHaveQuestion {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 288px;
+}
+
+.doYouStillHaveQuestionTextWrapper {
   margin-top: 24px;
+}
+
+.doYouStillHaveQuestion > .actionWrapper {
+  align-self: center;
+  justify-content: center;
 }
 
 .doYouStillHaveQuestion h3 {
@@ -85,3 +99,53 @@
   margin-left: 8px;
 }
 
+@media screen and (min-width: 640px) {
+  .generalInformationTitleWrapper {
+    width: 600px;
+  }
+  .faq {
+    width: 600px;
+  }
+  .questionWrapper {
+    padding: 21px 16px;
+  }
+  .doYouStillHaveQuestion {
+    width: 600px;
+  }
+  .doYouStillHaveQuestion > .actionWrapper {
+    margin-top: 0;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .faq {
+    width: 624px;
+  }
+  .generalInformationTitleWrapper {
+    width: 688px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .generalInformationTitleWrapper {
+    width: 820px;
+  }
+  .readDocs {
+    margin-right: 16px;
+  }
+}
+
+@media screen and (min-width: 1440px) {
+  .generalInformationTitleWrapper {
+    width: 920px;
+  }
+  .faq {
+    width: 992px;
+  }
+  .questionWrapper {
+    padding: 24px 48px;
+  }
+  .doYouStillHaveQuestion {
+    width: 688px;
+  }
+}
