--- a/css/index.css
+++ b/css/index.css
@@ -5,7 +5,6 @@
 
 body {
 	font-family: 'Inter', sans-serif;
-	background-color: #f7f8fa;
 }
 
 button {
@@ -15,10 +14,87 @@ button {
 }
 
 .headerAndSponsorshipWrapper {
-	width: 100%;
-	height: 589px;
+	min-height: 589px;
 	background-image: url("/images/top-bgd-mobile.svg");
 	background-repeat: no-repeat;
 	background-size: auto;
+}
+
+.tablet {
+	display: none;
+}
+
+.desktop {
+	display: none;
+}
+
+@keyframes topBackgroundFadeIn {
+	0% {
+		opacity: 0;
+		/* width: 70%; */
+	}
+	50% {
+		opacity: 0.7;
+		/* width: 90%; */
+	}
+	100% {
+		opacity: 1;
+		/* width: 100%; */
+	}
+}
+
+@media screen and (min-width: 640px) { 
+	.headerAndSponsorshipWrapper {
+		position: relative;
+		background: url("/images/top-bgd-tablet.svg") no-repeat;
+	}
+	.mobile {
+		display: none;
+	}
+	.tablet {
+		display: block;
+	}
+	.desktop {
+		display: none;
+	}
+}
+
+@media screen and (min-width: 1024px) { 
+	.headerAndSponsorshipWrapper {
+		background-image: url("/images/top-bgd-tablet.svg");
+		background-repeat: no-repeat;
+		background-size: 100%;
+	}
+	.mobile {
+		display: none;
+	}
+	.tablet {
+		display: none;
+	}
+	.desktop {
+		display: block;
+	}
+}
+
+@media screen and (min-width: 1440px) { 
+	.headerAndSponsorshipWrapper {
+		background-image: url("/images/Top-Bgd-Desktop.svg");
+		background-repeat: no-repeat;
+		background-size: cover;
+		background-position: 75% 0;
+	}
+	.headerAndSponsorshipWrapper {
+		height: 639px;
+	}
+}
+
+@media screen and (min-width: 2560px) { 
+	.headerAndSponsorshipWrapper {
+		background-size: contain;
+		background-position: 0 0;
+	}
+	.headerAndSponsorshipWrapper {
+		height: 739px;
+	}
 }
 
