--- a/css/fiscalSponsorship.css
+++ b/css/fiscalSponsorship.css
@@ -11,9 +11,8 @@
   box-sizing: border-box;
 }
 
-.fiscalSponsorshipTitleAndActionWrapper {
-  margin-bottom: 32px;
-}
+/* .fiscalSponsorshipTitleAndActionWrapper {
+} */
 
 .fiscalSponsorshipTitlesContainer {
   width: 304px;
@@ -77,22 +76,25 @@ button.applyToStart {
   display: flex;
   box-sizing: border-box;
   justify-content: flex-end;
-  width: 95%;
+  width: 100%;
+  height: 277px;
   align-self: flex-end;
 }
 
 .sponsorShipIllustrationWrapper img {
   width: 100%;
   height: 100%;
+  object-fit: cover;
+  object-position: left;
 }
 
-.sponsorShipIllustrationWrapper > .bigger {
+/* .sponsorShipIllustrationWrapper > .bigger {
   display: none;
 }
 
 .sponsorShipIllustrationWrapper > .biggest {
   display: none;
-}
+} */
 
 .desktopApply {
   display: none;
@@ -106,8 +108,8 @@ button.applyToStart {
   }
 
   .sponsorShipIllustrationWrapper {
-    width: 440px;
-    height: 479px;
+    width: 57%;
+    height: 473px;
   }
   .fiscalSponsorshipTitleAndActionWrapper{
     position: relative;
@@ -122,6 +124,7 @@ button.applyToStart {
 @media screen and (min-width: 768px) {
   .fiscalSponsorshipSection {
     margin-left: 42px;
+    margin-top: 40px;
   }
 }
 
@@ -135,13 +138,7 @@ button.applyToStart {
   }
   .fiscalSponsorshipTitleAndActionWrapper{
     top: 0;
-    margin-right: auto;
     margin-left: auto;
-  }
-  .sponsorShipIllustrationWrapper {
-    position: relative;
-    top: -140px;
-    z-index: 1;
   }
   .mobileApply {
     display: none;
@@ -154,11 +151,15 @@ button.applyToStart {
 
 @media screen and (min-width: 1280px) {
   .fiscalSponsorshipTitleAndActionWrapper {
-    margin-left: 22%;
+    margin-left: auto;
+    margin-right: auto;
   }
   .sponsorShipIllustrationWrapper {
     width: 640px;
     height: 679px;
+    position: relative;
+    top: -140px;
+    z-index: 1;
   }
   .fiscalSponsorshipTitlesContainer {
     width: 540px;
@@ -182,17 +183,30 @@ button.applyToStart {
     font-weight: bold;
     line-height: 1.25;
     color: #88c6c1;
-  }  
+  } 
+  .sponsorShipIllustrationWrapper > .biggest {
+    display: block;
+  } 
+}
+
+
+@media screen and (min-width: 1440px) {
+  .sponsorShipIllustrationWrapper {
+    width: 53%;
+    height: 593px;
+  }
+  .sponsorShipIllustrationWrapper img{
+    max-width: 100%;
+    max-height: 100%;
+  }
+
 }
 
 @media screen and (min-width: 2560px) { 
 	.sponsorShipIllustrationWrapper > .bigger {
     display: none;
   }
-  .sponsorShipIllustrationWrapper {
-    width: 1319px;
-    height: 735px;
-  }
+
   .sponsorShipIllustrationWrapper > .biggest {
     display: block;
   }
