--- a/css/index.css
+++ b/css/index.css
@@ -19,21 +19,6 @@ button {
 	cursor: pointer;
 }
 
-.headerAndSponsorshipWrapper {
-	min-height: 589px;
-	background-image: url("/images/top-bgd-mobile.svg");
-	background-repeat: no-repeat;
-	background-size: auto;
-}
-
-.tablet {
-	display: none;
-}
-
-.desktop {
-	display: none;
-}
-
 @keyframes topBackgroundFadeIn {
 	0% {
 		opacity: 0;
@@ -49,10 +34,42 @@ button {
 	}
 }
 
+
+.headerAndSponsorshipWrapper {
+	min-height: 579px;
+	background-image: url("/images/Top-Bgd.svg");
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center;
+	width: 100%;
+}
+
+.tablet {
+	display: none;
+}
+
+.desktop {
+	display: none;
+}
+
 @media screen and (min-width: 640px) { 
 	.headerAndSponsorshipWrapper {
 		position: relative;
-		background: url("/images/top-bgd-sm.svg") no-repeat;
+	}
+	.mobile {
+		display: none;
+	}
+	.tablet {
+		display: block;
+	}
+	.desktop {
+		display: none;
+	}
+}
+
+@media screen and (min-width: 768px) { 
+	.headerAndSponsorshipWrapper {
+		position: relative;
 	}
 	.mobile {
 		display: none;
@@ -66,10 +83,6 @@ button {
 }
 
 @media screen and (min-width: 1024px) { 
-	.headerAndSponsorshipWrapper {
-		background-image: url("/images/top-bgd-sm.svg");
-		background-repeat: no-repeat;
-	}
 	.mobile {
 		display: none;
 	}
@@ -83,23 +96,16 @@ button {
 
 @media screen and (min-width: 1440px) { 
 	.headerAndSponsorshipWrapper {
-		background-image: url("/images/Top-Bgd-lg.svg");
-		background-repeat: no-repeat;
-		background-size: cover;
-		background-position: 75% 0;
-	}
-	.headerAndSponsorshipWrapper {
+		background-position: right;
 		height: 639px;
 	}
 }
 
 @media screen and (min-width: 2560px) { 
 	.headerAndSponsorshipWrapper {
-		background-size: contain;
-		background-position: 0 0;
-	}
-	.headerAndSponsorshipWrapper {
-		height: 739px;
+		background-position: initial;
+		background-size: auto;
+		height: 611px;
 	}
 }
 
