--- a/css/readyToGetStarted.css
+++ b/css/readyToGetStarted.css
@@ -140,6 +140,7 @@
 		background-size: 100%;
     background-color: #f7f8fa;
     height: 520px;
+    width: 100%;
     background-position: 0 125%;
   }
   .getStartedTextAndActionWrapper {
