--- a/css/fiscalSponsorship.css
+++ b/css/fiscalSponsorship.css
@@ -2,6 +2,8 @@
   margin-left: 16px;
   margin-top: 57px;
   margin-bottom: 0;
+  z-index: 1;
+  position: relative;
 }
 
 .fiscalSponsorshipSectionContent {
@@ -113,6 +115,7 @@ button.applyToStart {
   }
   .fiscalSponsorshipTitleAndActionWrapper{
     position: relative;
+    z-index: 1;
     top: 40px;
     width: 294px;
   }
@@ -199,7 +202,13 @@ button.applyToStart {
     max-width: 100%;
     max-height: 100%;
   }
-
+  .fiscalSponsorshipTitleAndActionWrapper {
+    margin-top: 30px;
+  }
+  .actionWrapper { 
+    margin-top: 25px;
+    margin-bottom: 0;
+  }
 }
 
 @media screen and (min-width: 2560px) { 
