--- a/css/header.css
+++ b/css/header.css
@@ -53,7 +53,7 @@ header {
 .mobileNavOverlay {
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   left: 0;
   top: 0;
   bottom: 0;
@@ -67,7 +67,7 @@ header {
   height: 100%;
   display: none;
   position: fixed;
-  z-index: 2;
+  z-index: 3;
   left: 0;
   top: 0;
   bottom: 0;
@@ -78,7 +78,9 @@ header {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  height: 100%;
+  height: 100vh;
+  z-index: 3;
+  position: relative;
   background: url("/images/mobileNav-illustration.png") no-repeat bottom, #ffffff;
   border-top-right-radius: 32px;
   border-bottom-right-radius: 32px;
