--- a/css/modal.css
+++ b/css/modal.css
@@ -4,7 +4,7 @@
   top: 0;
   left: 0;
   background:  rgba(20, 20, 20, 0.6);
-  height: 100%;
+  height: 100vh;
   width: 100%;
   z-index: 999;
 }
@@ -17,7 +17,7 @@
 
 .modalContent {
   width: 100%;
-  height: 100%;
+  height: 100vh;
   min-height: 588px;
   padding: 40px 16px 60px;
   background: url("/images/mobileNav-illustration.png") no-repeat center bottom, #ffffff;
@@ -213,5 +213,11 @@
     width: 458px;
     margin-right: 32px;
     margin-left: 32px;
+  }
+}
+
+@media screen and (min-width: 1024px) { 
+	.modalContent {
+    height: 750px;
   }
 }
