--- a/css/fiscalSponsorship.css
+++ b/css/fiscalSponsorship.css
@@ -12,9 +12,6 @@
   box-sizing: border-box;
 }
 
-/* .fiscalSponsorshipTitleAndActionWrapper {
-} */
-
 .fiscalSponsorshipTitlesContainer {
   width: 304px;
 }
@@ -64,6 +61,21 @@ button.applyToStart {
   margin-right: 8px;
   width: 144px;
   white-space: nowrap;
+}
+
+.applyToStart:hover {
+  color: rgb(255, 255, 255);
+  background: linear-gradient(rgb(78, 80, 82) 0%, rgb(49, 50, 51) 100%) rgb(78, 80, 82);
+  border-color: rgb(78, 80, 82);
+}
+
+.applyToStart:focus {
+  box-shadow: rgb(144, 240, 189) 0px 0px 0px 2px;
+}
+
+.applyToStart:active {
+  background: rgb(20, 20, 20);
+  border-color: rgb(20, 20, 20);
 }
 
 .learnMore {
