--- a/css/index.css
+++ b/css/index.css
@@ -58,6 +58,21 @@ button {
 	z-index: 0;
 }
 
+.TopWhiteBackground {
+	position: absolute;
+	width: 1440px;
+	background: #ffff;
+	height: 600px;
+	display: none;
+	left: 0;
+	right: 0;
+	z-index: -1;
+	justify-content: center;
+	align-items: center;
+	margin-right: auto;
+	margin-left: auto;
+}
+
 .tablet {
 	display: none;
 }
@@ -120,6 +135,15 @@ button {
 		background-position: right;
 		height: 611px;
 		width: 89%;
+	}
+}
+
+@media screen and (min-width: 1441px) {
+	.headerAndSponsorshipWrapper {
+		background-color: #F7F8FA;
+	}
+	.TopWhiteBackground {
+		display: block;
 	}
 }
 
