--- a/css/readyToGetStarted.css
+++ b/css/readyToGetStarted.css
@@ -1,3 +1,20 @@
+.readyToGetStartedSection {
+  position: relative;
+  padding-bottom: 130px;
+  background: linear-gradient(180deg, #ffffff 70%, #F7F8FA 30%);
+}
+
+.getStartedBackground {
+  background-image: url("/images/Bgd-White-Tablet.svg.svg");
+  background-repeat: no-repeat;
+  background-position: center bottom;
+  width: 100%;
+  height: 702px;
+  position: absolute;
+  top: 20%;
+  z-index: 0;
+}
+
 .readyToGetStarted {
   margin-top: 41px;
   margin-left: 12px;
@@ -5,6 +22,8 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  z-index: 1;
+  position: relative;
 }
 
 .readyToGetStartedIllustration {
@@ -84,13 +103,6 @@
 
 
 @media screen and (min-width: 640px) {
-  .readyToGetStartedSection {
-    position: relative;
-    top: 30px;
-  }
-  .readyToGetStarted {
-    margin-right: 20px;
-  }
   .readyToGetStartedIllustration {
     width: 422px;
     height: 345px;
@@ -120,11 +132,13 @@
 }
 
 @media screen and (min-width: 768px) {
-  .readyToGetStartedSection {
-    top: 50px;
+  .getStartedBackground {
+    background-image: url("/images/Bgd-White-Desktop.svg");
+    height: 830px;
   }
-  .readyToGetStarted {
-    margin-right: 52px;
+  .getStartedTextAndActionWrapper {
+    align-self: flex-end;
+    margin: 0 5%;
   }
   .getStartedTextWrapper > .titleWrapper {
     width: 589px;
@@ -138,7 +152,7 @@
 
 @media screen and (min-width: 1024px) {
   .readyToGetStartedSection {
-    top: 0;
+    background: linear-gradient(180deg, #ffffff 10%, #F7F8FA 90%);
   }
   .readyToGetStarted {
     flex-direction: row;
@@ -149,51 +163,33 @@
   .readyToGetStartedIllustration {
     margin-left: 0;
   }
-  .getStartedInitiativeBG {
-		background-image: url("/images/initaties-background-desktop.svg");
-		background-repeat: no-repeat;
-		background-size: 100%;
-    background-color: #f7f8fa;
-    height: 520px;
-    width: 100%;
-    background-position: 0 125%;
-  }
   .getStartedTextAndActionWrapper {
-    margin-right: 30px;;
+    margin: 0 2%;
+  }
+  .getStartedBackground {
+    height: 602px;
+    top: 3%
   }
 }
 
 @media screen and (min-width: 1440px) {
+  .readyToGetStarted {
+    margin-top: 0;
+  }
   .readyToGetStartedIllustration {
     width: 534px;
     height: 455px;
     margin-right: 57px;
   }
-  .getStartedInitiativeBG {
-    background-position: 0 120%;
-    height: 700px;
-  }
-}
-
-@media screen and (min-width: 2560px) {
-  .getStartedInitiativeBG {
-    height: 1100px;
-    background-position: 0 100%;
-  }
   .readyToGetStartedSection {
-    display: flex;
-    justify-content: center;
+    background: #F7F8FA;
+    z-index: 0;
   }
-  .readyToGetStarted {
-    width: 1280px;
-    position: relative;
-    top: 330px;
-    margin-right: 0;
+  .getStartedTextAndActionWrapper {
+    align-self: auto;
   }
-  .readyToGetStartedIllustration {
-    margin-right: 57px;
+  .getStartedBackground {
+    height: 702px;
+    top: 0;
   }
 }
-
-
-
