--- a/css/whatWeOffer.css
+++ b/css/whatWeOffer.css
@@ -125,8 +125,20 @@
 }
 
 @media screen and (min-width: 1440px) {
+  .whatWeOfferSection {
+    background: #F7F8FA;
+    display: flex;
+    justify-content: center;
+  }
   .whatWeOffer {
     margin-top: 0;
+    box-sizing: border-box;
+    width: 1440px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding-bottom: 68px;
+    background: #ffffff;
   }
   .whatWeOfferItems {
     margin-top: 20px;
