--- a/css/generalInformation.css
+++ b/css/generalInformation.css
@@ -97,8 +97,6 @@
   margin-left: 20px;
 }
 
-
-
 .doYouStillHaveQuestion {
   display: flex;
   flex-direction: column;
@@ -220,6 +218,15 @@
   }
 }
 
+@media screen and (min-width: 1280px) {
+  .answerWrapper{
+    padding: 0 48px 24px;
+  }
+  .doYouStillHaveQuestionTextWrapper {
+    margin-top: 0;
+  } 
+}
+
 @media screen and (min-width: 1440px) {
   .generalInformationTitleWrapper {
     width: 920px;
@@ -230,12 +237,7 @@
   .faqQuestionHeaderWrapper {
     padding: 24px 48px;
   }
-  .answerWrapper{
-    padding: 0 48px 24px;
-  }
   .doYouStillHaveQuestion {
     width: 688px;
   }
 }
-
-
