--- a/css/index.css
+++ b/css/index.css
@@ -25,22 +25,6 @@ button {
 	cursor: pointer;
 }
 
-@keyframes topBackgroundFadeIn {
-	0% {
-		opacity: 0;
-		/* width: 70%; */
-	}
-	50% {
-		opacity: 0.7;
-		/* width: 90%; */
-	}
-	100% {
-		opacity: 1;
-		/* width: 100%; */
-	}
-}
-
-
 .headerAndSponsorshipWrapper {
 	position: relative;
 }
@@ -123,6 +107,12 @@ button {
 	}
 	.desktop {
 		display: block;
+	}
+}
+
+@media screen and (min-width: 1280px) { 
+	.backgroundHeader {
+		background-position: right;
 	}
 }
 
