--- a/css/fiscalSponsorship.css
+++ b/css/fiscalSponsorship.css
@@ -199,6 +199,7 @@ button.applyToStart {
 @media screen and (min-width: 1440px) {
   .sponsorShipIllustrationWrapper {
     width: 53%;
+    height: 593px;
   }
   .sponsorShipIllustrationWrapper img{
     max-width: 100%;
