--- a/css/ourFees.css
+++ b/css/ourFees.css
@@ -76,19 +76,19 @@
 .eightPercent {
   border-top-right-radius : 32px;
   border-top-left-radius : 32px;
-  background: url("/images/leaf-1.svg") no-repeat 24px 0, linear-gradient(to top, #045257 6%, #045257 6%, #4e908d 86%), linear-gradient(to bottom, #8ac6c1, #8ac6c1);
+  background: url("/images/leaf-1.svg") no-repeat 0 0, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
   background-color: #8AC6C1;
 }
 
 .sixPercent {
-  background: url("/images/leaf-1.svg") no-repeat 24px 0, url("/images/leaf-2.svg") no-repeat 24px 0, linear-gradient(to top, #045257 6%, #045257 6%, #4e908d 86%), linear-gradient(to bottom, #4e908d, #4e908d);
+  background: url("/images/leaf-1.svg") no-repeat 0 0, url("/images/leaf-2.svg") no-repeat 0 0, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
   background-color: #4E908D;
 }
 
 .fourPercent {
   border-bottom-right-radius : 32px;
   border-bottom-left-radius : 32px;
-  background: url("/images/leaf-1.svg") no-repeat 24px 0, url("/images/leaf-2.svg") no-repeat 24px 0, url("/images/leaf-3.svg") no-repeat 24px 0, linear-gradient(to top, #045257 6%, #045257 6%, #4e908d 86%), linear-gradient(to bottom, #045257, #045257);
+  background: url("/images/leaf-1.svg") no-repeat 0 0, url("/images/leaf-2.svg") no-repeat 0 0, url("/images/leaf-3.svg") no-repeat 0 0, linear-gradient(0deg, rgba(4,82,87,0.5) 0%, rgba(78,144,141,0.5) 100%);
   background-color: #045257;
 }
 
